# f-mac-tf

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg  tox.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: tests.yml
attic/: MFAC-scratch.py  m_fac.py  mfac_factory.py  mlflow_sweeper  scratch_sven.py  scratch_sven_2.py  test_optimizer
conf/: experiment1.yaml  experiment2.yaml  mfac_experiment.yaml  train.yaml
docs/source/: conf.py  index.rst  installation.rst  usage.rst
logs/experiment1/: os-setting.txt
logs/experiment1/Adam/: 2023-10-19:19:10m_Adam_resnet20_batch-128_run-0.csv  2023-10-19:20:10m_Adam_resnet20_batch-128_run-1.csv  2023-10-19:21:10m_Adam_resnet20_batch-128_run-2.csv
logs/experiment1/F-MFAC-ADAM/: 2023-10-20:11:10m_F-MFAC-ADAM_resnet20_batch-512_m-512_run-0.csv  2023-10-20:13:10m_F-MFAC-ADAM_resnet20_batch-512_m-512_run-1.csv
logs/experiment1/F-MFAC-SGD/: 2023-10-20:05:10m_F-MFAC-SGD_resnet20_batch-512_m-512_run-0.csv  2023-10-20:07:10m_F-MFAC-SGD_resnet20_batch-512_m-512_run-1.csv  2023-10-20:09:10m_F-MFAC-SGD_resnet20_batch-512_m-512_run-2.csv
logs/experiment1/MFAC/: 2023-10-19:23:10m_MFAC_resnet20_batch-512_m-512_run-0.csv  2023-10-20:01:10m_MFAC_resnet20_batch-512_m-512_run-1.csv  2023-10-20:03:10m_MFAC_resnet20_batch-512_m-512_run-2.csv
logs/experiment1/SGD/: 2023-10-19:21:10m_SGD_resnet20_batch-128_run-0.csv  2023-10-19:22:10m_SGD_resnet20_batch-128_run-1.csv  2023-10-19:23:10m_SGD_resnet20_batch-128_run-2.csv
logs/experiment2/: os_info.txt
logs/experiment2/Adam/: 2023-10-19:22:10m_Adam_resnet32_batch-128_run-0.csv  2023-10-19:23:10m_Adam_resnet32_batch-128_run-1.csv  2023-10-20:00:10m_Adam_resnet32_batch-128_run-2.csv
logs/experiment2/F-MFAC-SGD/: 2023-10-20:10:10m_F-MFAC-SGD_resnet32_batch-512_m-512_run-0.csv
logs/experiment2/MFAC/: 2023-10-20:07:10m_MFAC_resnet32_batch-512_m-512_run-0.csv
logs/experiment2/SGD/: 2023-10-20:01:10m_SGD_resnet32_batch-128_run-0.csv  2023-10-20:02:10m_SGD_resnet32_batch-128_run-1.csv  2023-10-20:02:10m_SGD_resnet32_batch-128_run-2.csv
src/: run_experiments.py  run_experiments_MFAC.py
src/f_mac_tf/: ChatGPT  version.py
src/m_fac_tf/: __init__.py  mfac_optimizer.py  run_experiments.py  run_experiments_MFAC.py  run_models.py
src/m_fac_tf/models/: __init__.py  models.py
src/m_fac_tf/optimizers/: MFAC.py  SGD.py  m_fac.py  tester.py
src/m_fac_tf/utils/: __init__.py  datasets.py  helper_functions.py  monitor_training.py  utils.py
src/models/: models.py
src/optimizers/: F-MFAC-ADAM.py  F-MFAC-SGD.py  F_MFAC_ADAM.py  F_MFAC_SGD.py  MFAC.py  SGD.py  __init__.py
src/utils/: datasets.py  helper_functions.py  monitor_training.py
tests/: __init__.py  test_sample.py  test_version.py
